cambios en el nav

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <title>Document</title>
 </head>
 <body>
-  <nav class="fondo texto-titulo">Hola soy feibri</nav>
+  <nav class="fondo texto-titulo">
+    <li>soy</li>
+    <li>un</li>
+    <li>pez</li>
+  </nav>
 </body>
 </html>
