--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <title>Document</title>
 </head>
 <body>
-  <nav class="fondo texto-titulo"> Hola Mundo</nav>
+  <nav class="fondo texto-titulo">No es un nav</nav>
 </body>
 </html>
