--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
   <title>Document</title>
 </head>
 <body>
-  <nav class="fondo texto-titulo">No es un nav</nav>
-  <nav class="fondo texto-titulo">
-    <li>soy</li>
-    <li>un</li>
-    <li>pez</li>
-  </nav>
+  <nav class="fondo texto-titulo">Hola Mundo!</nav>
 </body>
 </html>
