cambio de nombre al titulo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <title>Document</title>
 </head>
 <body>
-  <nav class="fondo texto-titulo">Hola Mundo!</nav>
+  <nav class="bg-primary texto-titulo p-5">GIT</nav>
 </body>
 </html>
