--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
 </head>
 <body>
   <nav class="bg-primary texto-titulo p-5">GIT</nav>
+
+  <div class="container">
+    <div class="row">
+      <h5>Hola Mundo</h5>
+      <div class="col-8">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo repellendus eos obcaecati quis error quibusdam, voluptas sunt magnam distinctio veritatis officia tempora recusandae, enim voluptatem iste suscipit! Animi eius nesciunt rem perferendis illo? Ut aliquid eos sed libero enim doloremque dolorem amet asperiores placeat incidunt illo harum, commodi in deleniti?</p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
