--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
 
   <div class="container">
     <div class="row">
-      <h5>Hola Mundo</h5>
+      <h5>Hola Mundo con GIT</h5>
       <div class="col-8">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo rem perferendis illo? Ut aliquid eos sed libero enim doloremque dolorem amet asperiores placeat incidunt illo harum, commodi in deleniti?</p>
+        <p>Cuerpo del mensaje Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo modi vitae veniam nesciunt aperiam unde aut assumenda provident, voluptas sequi.</p>
+      </div>
+    </div>
+    <div class="row">
+      <h5>Hola Mundo con GIT</h5>
+      <div class="col-8">
+        <p>Cuerpo del mensaje Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo modi vitae veniam nesciunt aperiam unde aut assumenda provident, voluptas sequi.</p>
       </div>
     </div>
   </div>
